Fix page date time alignment.

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1190,9 +1190,11 @@ body.vertical-menu footer {
 }
 
 .toc-block {
-  background-color: $light-gray;
-  border-width: 1px 0;
-  padding: $global-padding;
+  &.container {
+    background-color: $light-gray;
+    border-width: 1px 0;
+    padding: $global-padding;
+  }
 
   @include breakpoint(small down) {
     width: 100%;
@@ -1201,28 +1203,18 @@ body.vertical-menu footer {
     float: none;
   }
 
-  &:first-child {
-    position: sticky;
-    @include xy-cell(3);
-    float: left;
-    top: $global-margin;
-
-    & ~ * {
-      @include xy-cell(9);
-      float: right;
-     
-      @include breakpoint(small down) {
-        width: 100%;
-        margin-left: 0;
-        margin-right: 0;
-      } 
-    }
+  & > ul {
+    border-left: 0;
   }
 
   & > ul,
   ul ul {
     @extend .menu;
     @extend .vertical;
+  }
+
+  & > ul > li > a {
+    font-weight: normal;
   }
   
   ul {
@@ -1233,6 +1225,24 @@ body.vertical-menu footer {
     @extend .nested;
   }
   
+}
+
+.block-layout-alignment-left .toc-block {
+  position: sticky;
+  @include xy-cell(3);
+  float: left;
+  top: $global-margin;
+
+  & ~ * {
+    @include xy-cell(9);
+    float: right;
+    
+    @include breakpoint(small down) {
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+    } 
+  }
 }
 
 .preview-block .preview-header {
@@ -1250,6 +1260,10 @@ body.vertical-menu footer {
 .preview-block .browse-controls {
   margin: 0;
   justify-content: flex-end;
+}
+
+.page-date-time .property {
+  overflow: visible;
 }
 
 // -- Search
